[package]
name = "cell_move_router"
version = "0.1.0"
authors = ["w4n9r3ntru3 <patrick1031wang@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.32"
arrayvec= "0.5.1"
num = "0.3.0"
rayon = "1.3.1"
structopt = "0.3.15"
