[package]
name = "cell_move_router"
version = "0.1.0"
authors = ["w4n9r3ntru3 <patrick1031wang@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.34"
arrayvec= "0.5.2"
clap = "3.0.0-beta.2"
num = "0.3.1"
rayon = "1.5.0"
